# caffeinate

./: Cargo.toml  README.md  implementation.md  rust_tutorial.html
scripts/: build_app.sh  make_icons.py
src/: app_state.rs  awake.rs  icons.rs  main.rs  timer.rs  tray.rs
